# ml-fundamentals

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  install-jupyter-extension.sh  setup.sh
data/: SuperMarketAnalysis.csv
docs/: env-setup-codespaces.md  env-setup-local.md  env-setup-vm.md  using-notebooks-in-vs-code.md
supervised_learning/: variables_and_problem_types_theory.ipynb
supervised_learning/regression/: 01_regression.ipynb  02_feature_engineering.ipynb  03_evaluation.ipynb  04_cross_validation.ipynb  05_advanced_regression.ipynb  README.md  exercise.md  requirements.txt
