[project]
name = "ml-fundamentals"
version = "0.1.0"
description = ""
authors = [
    { name = "Quy Vu", email = "vuquy@microsoft.com" },
    { name = "Leonidas Dimitrios Tsaprounis", email = "ltsaprounis@microsoft.com" },
    { name = "Alessia Lin", email = "alessialin@microsoft.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets==8.1.7",
    "lightgbm==4.6.0",
    "matplotlib==3.10.1",
    "nbformat==5.10.4",
    "pandas==2.3.2",
    "plotly==6.1.2",
    "seaborn==0.13.2",
    "scikit-learn==1.6.1",
    "xgboost==3.0.2",
    "ipykernel>=6.30.1",
]
